[project]
name = "comfy"  # this is the package name seen by pip
version = "0.1.0"
description = "Your project description here"
authors = [
  { name = "Your Name", email = "you@example.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
